k8s/services/bandicoot-prod-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bandicoot-prod
  labels:
    app: bandicoot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bandicoot-prod
  template:
    metadata:
      labels:
        app: bandicoot-prod
    spec:
      containers:
      - name: bandicoot-prod
        image: gcr.io/kuar-demo/kuard-amd64:green
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
