k8s/services/alpaca-prod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpaca-prod
spec:
  type: LoadBalancer
  selector:
    app: alpaca-prod
  ports:
  - protocol: TCP
    port: 8080
