k8s/services/bandicoot-prod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bandicoot-prod
spec:
  selector:
    app: bandicoot-prod
  ports:
  - protocol: TCP
    port: 8080
