k8s/services/alpaca-prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress
spec:
  rules:
  - host: alpaca.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: alpaca-prod
            port: 
              number: 8080
