k8s/services/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  labels:
    name: tls-ingress
spec:
  tls:
    - hosts:
      - myexample.com
      secretName: tls-secret-name
  rules:
  - host: myexample.com
    http:
      paths:
      - backend:
          serviceName: alpaca
          servicePort: 8080
